--- a/projects/rilke-ui/src/scss/_vars.scss
+++ b/projects/rilke-ui/src/scss/_vars.scss
@@ -16,8 +16,8 @@ $m-1: 10px;
 $m-2: 1rem;
 
 // Shadow
-$s-1: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
-$s-2: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+$s-1: 0 0.125rem 0.25rem rgba(0, 0, 0, 7.5%) !important;
+$s-2: 0 0.5rem 1rem rgba(0, 0, 0, 15%) !important;
 
 //  Module Rem
 $module-rem: 1rem;
