--- a/projects/rilke-ui/src/scss/_ng-zorro-custom.scss
+++ b/projects/rilke-ui/src/scss/_ng-zorro-custom.scss
@@ -1,30 +1,35 @@
 .ant-input {
-  background: #ebebeb;
-  border-radius: 20px;
-  width: 100%;
+	background: #EBEBEB;
+	border-radius: 20px;
+	width: 100%;
 
-  &:not(.ant-input-disabled):hover {
-    box-shadow: $shadow-hover;
-  }
-  &-lg {
-    border-radius: 25px;
-  }
-  &-disabled {
-    background: rgba(#ccc,.1);
-    border-color: rgba(#ccc,.5);
-    color: #bdbdbd;
-  }
+	&:not(.ant-input-disabled):hover {
+		box-shadow: $shadow-hover;
+	}
+
+	&-lg {
+		border-radius: 25px;
+	}
+
+	&-disabled {
+		background: rgba(#CCC, .1);
+		border-color: rgba(#CCC, .5);
+		color: #BDBDBD;
+	}
 }
+
 .ant-calendar-picker {
-  width: 100%;
+	width: 100%;
 
-  .ant-calendar-picker-clear {
-    background-color: #ebebeb;
-  }
-  .ant-calendar-range-picker-separator {
-    vertical-align: middle;
-  }
+	.ant-calendar-picker-clear {
+		background-color: #EBEBEB;
+	}
+
+	.ant-calendar-range-picker-separator {
+		vertical-align: middle;
+	}
 }
+
 .ant-calendar-input-wrap {
-  height: 40px;
+	height: 40px;
 }
