--- a/projects/rilke-ui/src/lib/components/auto-complete/auto-complete.component.html
+++ b/projects/rilke-ui/src/lib/components/auto-complete/auto-complete.component.html
@@ -1,4 +1,4 @@
-<ka-input
+<ril-input
 	[(ngModel)]="value"
 	(ngModelChange)="modelChanged($event)"
 	[placeholder]="placeholder"
@@ -9,7 +9,6 @@
 	[prefixIcon]="prefixIcon"
 	[suffixIcon]="suffixIcon"
 	[autoSize]="autoSize"
-	[size]="size"
 	[prefix]="prefix"
 	[suffix]="suffix"
 	[bgColor]="bgColor"
@@ -18,15 +17,15 @@
 	(focus)="autocompleteOnFocus()"
 	(blur)="autocompleteOnBlur()"
 	(keydown)="keyClick($event)"
-></ka-input>
+></ril-input>
 
-<div class="autocomplete-list" [ngClass]="{ 'opened': openedList }">
+<div class="auto-complete-list" [ngClass]="{ opened: openedList }">
 	<ul class="list-ul" [ngStyle]="getListStyles()">
 		<li
 			class="list-li"
 			(click)="selectItem(item, $event)"
 			*ngFor="let item of results; let i = index"
-			[ngClass]="{ 'active': i === arrowKeyLocation }"
+			[ngClass]="{ active: i === arrowKeyLocation }"
 			[innerHtml]="markValue(key ? item[key] : item, value)"
 		>
 			{{ key ? item[key] : item }}
