--- a/projects/rilke-ui/src/lib/components/list/list-header/list-header.component.html
+++ b/projects/rilke-ui/src/lib/components/list/list-header/list-header.component.html
@@ -1,5 +1,8 @@
 <div *ngIf="checkbox" class="list-check">
-	<ka-checkbox [formControl]="listCheck" [value]="listCheck.value"></ka-checkbox>
+	<ril-checkbox
+		[formControl]="listCheck"
+		[value]="listCheck.value"
+	></ril-checkbox>
 </div>
 <div [ngClass]="{ 'pl-4': !checkbox }" class="columns">
 	<ng-content></ng-content>
