--- a/projects/rilke-ui/src/lib/components/menu/menu.component.scss
+++ b/projects/rilke-ui/src/lib/components/menu/menu.component.scss
@@ -19,4 +19,9 @@
 ::ng-deep .mat-menu-panel {
 	background: $main-800;
 	border-radius: $r-md !important;
+
+	&::-webkit-scrollbar {
+		display: none;
+		scrollbar-width: none;
+	}
 }
