--- a/projects/rilke-ui/src/lib/components/select/select.component.scss
+++ b/projects/rilke-ui/src/lib/components/select/select.component.scss
@@ -1,218 +1,104 @@
 @import "../../../scss/vars";
 
-// $_bg: (
-// 	default: $input-bg-color,
-// 	hover: $input-bg-hover-color,
-// 	focus: $input-bg-color,
-// 	disabled: rgba(230, 230, 230, 0.2),
-// );
-// $_border: (
-// 	default: $input-bg-color,
-// 	hover: $input-bg-hover-color,
-// 	focus: $input-border-focus-color,
-// 	disabled: rgba(230, 230, 230, 0.2),
-// );
-// $_color: (
-// 	default: $input-color,
-// 	hover: $input-color,
-// 	focus: $input-color,
-// 	disabled: #bdbdbd,
-// );
+:host {
+	border-radius: $r-md;
+	display: block;
+	font-size: $f-size-md;
+	line-height: $f-line-md;
+	position: relative;
 
-// $_module-rem: $module-rem;
-// $_fs: 1rem;
-// $_lh: $_module-rem * 2 / $_fs;
-// $_padding-h: $_module-rem * 2;
-// $_padding-v: $_module-rem;
-// $_error-color: $error-color;
-// $_shape: $shape;
-// $_animation: $animation;
-// $_shadow-hover: $shadow-hover;
-// $_list-height: $_module-rem * 21;
-// $_list-bg: #fff;
-// $_list-border-color: #fff;
-// $_list-shadow: $shadow;
+	.select-box {
+		align-items: center;
+		background: $main-800;
+		border: 1px solid $main-800;
+		border-radius: inherit;
+		color: $main-contrast-800;
+		cursor: pointer;
+		overflow: hidden;
+		transition: background 0.2s ease-in-out, border-color 0.2s ease-in-out,
+			box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
+		width: 100%;
+		padding: $p-sm;
 
-// // size sm
-// $_fs-sm: ($_fs * 0.9);
-// $_lh-sm: $_module-rem * 2 / $_fs-sm;
-// $_shape-sm: ($_shape * 0.8);
-// $_padding-v-sm: ($_module-rem / 2);
+		::ng-deep {
+			.mat-select-value {
+				max-width: 100%;
+				color: $main-contrast-800;
 
-// // size lg
-// $_fs-lg: ($_fs * 1.3);
-// $_lh-lg: $_module-rem * 2 / $_fs-lg;
-// $_shape-lg: ($_shape * 1.5);
-// $_padding-v-lg: $_module-rem * 1.5;
+				.mat-select-placeholder {
+					color: $main-700;
+				}
+			}
 
-// :host {
-// 	border-radius: $_shape;
-// 	display: block;
-// 	font-size: $_fs;
-// 	line-height: $_lh;
-// 	position: relative;
+			.mat-select-arrow {
+				color: $main-contrast-800;
+			}
+		}
+	}
 
-// 	.select-box {
-// 		align-items: center;
-// 		background: map-get($_bg, default);
-// 		border: 1px solid map-get($_border, default);
-// 		border-radius: inherit;
-// 		color: map-get($_color, default);
-// 		cursor: pointer;
-// 		display: flex;
-// 		justify-content: flex-end;
-// 		overflow: hidden;
-// 		padding: calc(#{$_padding-v} - 1px) 1rem calc(#{$_padding-v} - 1px) 1rem;
-// 		transition: background 0.2s $_animation, border-color 0.2s $_animation,
-// 			box-shadow 0.2s $_animation, color 0.2s $_animation;
-// 		width: 100%;
+	:host-context(ril-form-group.float) {
+		.select-box {
+			border-color: blue;
+		}
+	}
 
-// 		> * {
-// 			padding: 0 ($_module-rem / 2);
-// 		}
+	&:hover {
+		.select-box {
+			background: $main-700;
+			border-color: $main-700;
+			color: $main-contrast-700;
+		}
+	}
+	&.multiple {
+		.select-box {
+			height: unset;
+			min-height: $base-size * 3;
 
-// 		.value {
-// 			flex-grow: 1;
-// 			text-align: left;
-// 			padding: 0 0.2em;
-// 			white-space: nowrap;
-// 		}
-// 		.placeholder {
-// 			color: map-get($_color, default);
-// 			flex-grow: 1;
-// 			opacity: 0.6;
-// 			padding: 0 0.2em;
-// 			white-space: nowrap;
-// 		}
-// 		.icon {
-// 			align-self: flex-start;
-// 			align-items: center;
-// 			display: flex;
-// 			font-size: 1.5em;
-// 			height: $_module-rem * 2;
-// 			line-height: 1;
-// 			opacity: 0.9;
-// 			transition: color 0.2s $_animation, opacity 0.2s $_animation,
-// 				transform 0.2s $_animation;
+			> .value {
+				margin: -($base-size/ 2);
+				white-space: normal;
+			}
+		}
+	}
+	&.opened {
+		.select-box {
+			background: $main-700;
+			border-color: $main-200;
+			box-shadow: $s-md;
+			color: $main-contrast-700;
+		}
+	}
+	&.disabled {
+		cursor: not-allowed;
 
-// 			&.clear {
-// 				color: rgba($_error-color, 0.5);
-// 				transform: translateX(100%);
+		.select-box {
+			background: $main-500;
+			border-color: $main-500;
+			box-shadow: none;
+			color: $main-contrast-500;
+			cursor: not-allowed;
+			pointer-events: none;
+		}
+	}
+	&.ng-invalid.ng-touched,
+	.has-error & {
+		.select-box {
+			background-color: rgba($error-color, 0.1);
+			border: 1px solid $error-color;
+		}
+	}
+}
 
-// 				&:hover {
-// 					color: $_error-color;
-// 				}
-// 			}
-// 			&.caret {
-// 				opacity: 0.5;
+::ng-deep .mat-select-panel {
+	background: $main-800;
+	border-radius: $r-md !important;
 
-// 				&.active {
-// 					transform: rotate(180deg);
-// 				}
-// 			}
-// 		}
+	&::-webkit-scrollbar {
+		display: none;
+		scrollbar-width: none;
+	}
 
-// 		::ng-deep {
-// 			.mat-select-value {
-// 				max-width: 100%;
-// 				color: $main-color;
-// 			}
-
-// 			.mat-select-arrow {
-// 				color: $main-color;
-// 			}
-// 		}
-// 	}
-
-// 	:host-context(ka-form-group.float) {
-// 		.select-box {
-// 			border-color: map-get($_border, default);
-// 		}
-// 	}
-
-// 	&:hover,
-// 	&.opened {
-// 		.select-box {
-// 			.icon {
-// 				&.clear {
-// 					transform: translateX(0);
-// 				}
-// 				&.caret {
-// 					opacity: 1;
-// 				}
-// 			}
-// 		}
-// 	}
-// 	&:hover {
-// 		.select-box {
-// 			background: map-get($_bg, hover);
-// 			border-color: map-get($_border, hover);
-// 			color: map-get($_color, hover);
-// 		}
-// 	}
-// 	&.multiple {
-// 		.select-box {
-// 			height: unset;
-// 			min-height: $_padding-v + ($_fs * $_lh);
-
-// 			> .value {
-// 				margin: -($_module-rem / 2);
-// 				white-space: normal;
-// 			}
-// 		}
-// 	}
-// 	&.opened {
-// 		.select-box {
-// 			background: map-get($_bg, focus);
-// 			border-color: map-get($_border, focus);
-// 			box-shadow: $_shadow-hover;
-// 			color: map-get($_color, focus);
-// 		}
-// 	}
-// 	&.disabled {
-// 		cursor: not-allowed;
-
-// 		.select-box {
-// 			background: map-get($_bg, disabled);
-// 			border-color: map-get($_border, disabled);
-// 			box-shadow: none;
-// 			color: map-get($_color, disabled);
-// 			cursor: not-allowed;
-// 			pointer-events: none;
-// 		}
-// 	}
-// 	&.ng-invalid.ng-touched,
-// 	.has-error & {
-// 		.select-box {
-// 			background-color: rgba($error-color, 0.1);
-// 			border: 1px solid $error-color;
-// 		}
-// 	}
-// 	&.select-sm {
-// 		border-radius: $_shape-sm;
-// 		font-size: $_fs-sm;
-// 		line-height: $_lh-sm;
-
-// 		.select-box {
-// 			padding-top: calc(#{$_padding-v-sm} - 1px);
-// 			padding-bottom: calc(#{$_padding-v-sm} - 1px);
-// 		}
-// 	}
-// 	&.select-lg {
-// 		border-radius: $_shape-lg;
-// 		font-size: $_fs-lg;
-// 		line-height: $_lh-lg;
-
-// 		.select-box {
-// 			padding-top: calc(#{$_padding-v-lg} - 1px);
-// 			padding-bottom: calc(#{$_padding-v-lg} - 1px);
-// 		}
-// 	}
-
-// 	&.input-nostyle {
-// 		.select-box {
-// 			background: transparent !important;
-// 			border: none !important;
-// 		}
-// 	}
-// }
+	.mat-option {
+		color: $main-contrast-800;
+	}
+}
