--- a/projects/rilke-ui/src/lib/components/progress-spinner/progress-spinner.component.html
+++ b/projects/rilke-ui/src/lib/components/progress-spinner/progress-spinner.component.html
@@ -1,7 +1,7 @@
 <mat-progress-spinner
-	[style.stroke]="strokeColor + ' !important'"
+	[style.stroke]="color + ' !important'"
 	[diameter]="diameter"
-	[strokeWidth]="strokeWidth"
+	[strokeWidth]="thickness"
 	[mode]="mode"
 ></mat-progress-spinner>
 <p *ngIf="loadingText">{{ loadingText }}</p>
