--- a/projects/rilke-ui/src/lib/components/switcher/switcher.component.scss
+++ b/projects/rilke-ui/src/lib/components/switcher/switcher.component.scss
@@ -44,7 +44,7 @@
 			}
 		}
 		.ril-switcher-label {
-			color: $main-800;
+			color: $main-contrast-700;
 			margin-left: 10px;
 			transition: color 0.2s ease-in-out;
 
@@ -61,7 +61,7 @@
 				}
 			}
 			.ril-switcher-label {
-				color: $main-700;
+				color: $main-contrast-700;
 			}
 		}
 	}
@@ -76,7 +76,7 @@
 				}
 			}
 			.ril-switcher-label {
-				color: $main-800;
+				color: $main-contrast-700;
 			}
 		}
 	}
