--- a/projects/rilke-ui/src/lib/components/pagination/pagination.component.html
+++ b/projects/rilke-ui/src/lib/components/pagination/pagination.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
 	<div class="page-item" [ngClass]="{ disabled: pageNum == 1 }">
-		<a class="page-link pr-4 pl-4" (click)="firstPage()">{{ "Prev" }}</a>
+		<a class="page-link pr-4 pl-4" (click)="firstPage()">{{ firstText }}</a>
 	</div>
 	<!-- TODO pagination max page number yapılmadı geçiştirildi -->
 	<div
@@ -12,6 +12,6 @@
 	</div>
 
 	<div class="page-item" [ngClass]="{ disabled: pageNum == getLast() }">
-		<a class="page-link pr-4 pl-4" (click)="lastPage()">{{ "Next" }}</a>
+		<a class="page-link pr-4 pl-4" (click)="lastPage()">{{ lastText }}</a>
 	</div>
 </div>
